--- a/blossom-module-infrastructure/blossom-module-infrastructure-biz/src/main/resources/codegen/java/dal/mapper.vm
+++ b/blossom-module-infrastructure/blossom-module-infrastructure-biz/src/main/resources/codegen/java/dal/mapper.vm
@@ -1,4 +1,4 @@
-package ${basePackage}.module.${table.moduleName}.dal.mapper.${table.businessName};
+package ${basePackage}.module.${table.moduleName}.dal.mysql.${table.businessName};
 
 import java.util.*;
 
