--- a/blossom-module-infrastructure/blossom-module-infrastructure-biz/src/main/resources/codegen/java/test/serviceTest.vm
+++ b/blossom-module-infrastructure/blossom-module-infrastructure-biz/src/main/resources/codegen/java/test/serviceTest.vm
@@ -10,7 +10,7 @@ import ${baseFrameworkPackage}.test.core.ut.BaseDbUnitTest;
 
 import ${basePackage}.module.${table.moduleName}.controller.${sceneEnum.basePackage}.${table.businessName}.vo.*;
 import ${basePackage}.module.${table.moduleName}.dal.dataobject.${table.businessName}.${table.className}DO;
-import ${basePackage}.module.${table.moduleName}.dal.mapper.${table.businessName}.${table.className}Mapper;
+import ${basePackage}.module.${table.moduleName}.dal.mysql.${table.businessName}.${table.className}Mapper;
 import ${PageResultClassName};
 
 import javax.annotation.Resource;
