--- a/blossom-module-infrastructure/blossom-module-infrastructure-biz/src/main/resources/codegen/sql/h2.vm
+++ b/blossom-module-infrastructure/blossom-module-infrastructure-biz/src/main/resources/codegen/sql/h2.vm
@@ -1,4 +1,4 @@
--- 将该建表 SQL 语句，添加到 yudao-module-${table.moduleName}-biz 模块的 test/resources/sql/create_tables.sql 文件里
+-- 将该建表 SQL 语句，添加到 blossom-module-${table.moduleName}-biz 模块的 test/resources/sql/create_tables.sql 文件里
 CREATE TABLE IF NOT EXISTS "${table.tableName.toLowerCase()}" (
 #foreach ($column in $columns)
 #if (${column.javaType} == 'Long')
@@ -33,5 +33,5 @@ CREATE TABLE IF NOT EXISTS "${table.tableName.toLowerCase()}" (
     PRIMARY KEY ("${primaryColumn.columnName.toLowerCase()}")
 ) COMMENT '${table.tableComment}';
 
--- 将该删表 SQL 语句，添加到 yudao-module-${table.moduleName}-biz 模块的 test/resources/sql/clean.sql 文件里
+-- 将该删表 SQL 语句，添加到 blossom-module-${table.moduleName}-biz 模块的 test/resources/sql/clean.sql 文件里
 DELETE FROM "${table.tableName}";
